# optional-faker

./: .cruft.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  mine_seed.py  optional_faker.py  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: deploy-pypi.yml  test.yml
tests/: __init__.py  test_provider.py
