[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "optional-faker"
version = "0.1.0"
description = "Small wrapper around faker, to make values optional!"
license = "GPL3"
authors = ["PerchunPak <pypi@perchun.it>"]
readme = "README.md"
repository = "https://github.com/PerchunPak/optional-faker"
keywords = ["faker"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Plugins",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Testing",
  "Topic :: Utilities",
  "Typing :: Typed",
]


[tool.poetry.dependencies]
python = "^3.8,<=3.11"

# Our dependecies
Faker = "~15"


[tool.poetry.group.make.dependencies]
black = "~22"
isort = "~5.10"
pycln = "~2.1"
mypy = "*"  # dependabot can't update non semver dependencies with our config, see e9376da in fire-square-style
flake8 = "~5"
flake8-docstrings = "~1"
pydocstyle = ">=4.0.0"
safety = "~2.3"

pre-commit = "~2.20"


[tool.poetry.group.tests.dependencies]
pytest = "~7.2"
pytest-cov = "~4.0"
pytest-mock = "~3.10"
pytest-testmon = "~1.4"
pytest-randomly = "~3.12"


[tool.poetry.group.docs.dependencies]
sphinx = "~5.3"
sphinx-autodoc-typehints = "~1.19"
sphinx-autoapi = "~2.0"
sphinx-intl = "~2.0"  # only for locales
furo = "*"
m2r2 = "~0.3"
tomli = { version = "~2.0", markers = "python_version < '3.11'" }
packaging = "21.3"


[tool.poetry.group.github_hooks]
optional = true

[tool.poetry.group.github_hooks.dependencies]
requests = "~2.28"
GitPython = "~3.1"


[tool.black]
line-length = 120
target-version = ['py38']
