[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "optional-faker"
version = "2.0.0"
description = "Small wrapper around faker, to make values optional!"
license = "GPL3"
authors = ["PerchunPak <pypi@perchun.it>"]
readme = "README.md"
repository = "https://github.com/PerchunPak/optional-faker"
keywords = ["faker"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Plugins",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Testing",
  "Topic :: Utilities",
  "Typing :: Typed",
]


[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"

# Our dependecies
Faker = "*"


[tool.poetry.group.make.dependencies]
black = "~23"
isort = "~5.12"
pycln = "~2.2"
flake8 = "~6"
flake8-docstrings = "~1"
flake8-ensure-ascii = "~1.0"
pydocstyle = ">=4.0.0"
safety = "~2.3"
cruft = "~2.15"
lice = "~0.6"  # for generating template

pre-commit = "~3.3"


[tool.poetry.group.typing.dependencies]
mypy = "~1.4"


[tool.poetry.group.tests.dependencies]
pytest = "~7.4"
pytest-cov = "~4.1"
pytest-mock = "~3.11"
pytest-testmon = "~2.0"
pytest-randomly = "~3.13"


[tool.poetry.group.docs.dependencies]
sphinx = "~7.1"
sphinx-autodoc-typehints = "~1.24"
sphinx-autoapi = "~2.1"
sphinx-intl = "~2.0"  # only for locales
furo = "*"
m2r2 = "~0.3"
tomli = { version = "~2.0", markers = "python_version < '3.11'" }
packaging = "23.1"


[tool.poetry.group.github_hooks]
optional = true

[tool.poetry.group.github_hooks.dependencies]
requests = "~2.31"
GitPython = "~3.1"


[tool.black]
line-length = 120
target-version = ['py38']
